@@ -16,6 +16,7 @@ repositories {
 
 dependencies {
     compileOnly("com.google.code.gson:gson:2.9.0")
+    testImplementation("com.google.code.gson:gson:2.9.0")
     testImplementation(platform("org.junit:junit-bom:5.9.1"))
     testImplementation("org.junit.jupiter:junit-jupiter")
 }
@@ -34,5 +35,11 @@ publishing {
         create<MavenPublication>("mavenJava") {
             from(components["java"])
         }
+    }
+}
+tasks{
+    test{
+        useJUnitPlatform()
+//        jvmArgs("--enable-preview")
     }
 }
